--- a/renovate.json5
+++ b/renovate.json5
@@ -2,4 +2,10 @@
 "dependencyDashboard": true,
 "prHourlyLimit": 20,
 "rebaseWhen": "automerging",
+"packageRules": [
+      {
+        "matchDatasources": ["npm"],
+        "automerge": true
+      }
+    ]
 }
